--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -2,11 +2,12 @@
     <head>
         <title>Chai Spec Runner (Back-end)</title>
         <script src="../node_modules/chai/chai.js"></script>
-        <!-- <scirpt src="../node_modules/express/lib"></scirpt> -->
+        <scirpt src="../node_modules/express/index.js"></scirpt>
         <script src="require.js"></script>
+        <script src="httpHandler.spec.js"></script>
     </head>
     <body>
         <div id="mocha"></div>
-        <script src="httpHandler.spec.js"></script>
+
     </body>
 </html>
