Added CSS styling to update and delete buttons

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>To-Do List (Hooks)</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
