--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
         <title>To-Do List (Hooks)</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Patrick+Hand+SC&display=swap" rel="stylesheet">
+        
     </head>
     <body>
         <div id="app"></div>
